--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "googleapis": "^85.0.0",
+    "luxon": "^2.0.2",
     "morgan": "^1.10.0",
     "nanoid": "^3.1.25"
   },
@@ -32,7 +33,12 @@
     "@types/consola": "^2.2.5",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/luxon": "^2.0.4",
     "@types/node": "^16.9.1",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "eslint": "^7.32.0",
+    "eslint-config-google": "^0.14.0",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
     "nodemon": "^2.0.12",
